--- a/configs/apiserver.toml
+++ b/configs/apiserver.toml
@@ -1,2 +1,5 @@
 bind_addr = ":8080"
 log_level = "debug"
+
+[store]
+database_url = "host=localhost dbname=restapi_dev user=user password=1234 sslmode=disable"
